--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,9 @@
         "react",
         "jsx-a11y",
         "import"
-    ]
+    ],
+    "rules": {
+      "no-undef": 0,
+      "no-use-before-define": 0
+    }
 }
